[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codetwin"
version = "1.0.0"
authors = [
    { name="Keshav" },
]
description = "AST-based code similarity detection tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Education",
]
license = { file = "LICENSE.txt" }
dependencies = [
    "tree-sitter",
    "tqdm",
]

[project.urls]